fix createCommunity
